# AFR

./: .gitignore  AFRNet_Windows_Baseline_Guide.docx  main.py  pyproject.toml  save_roco.py  train.py  train_afrnet.py
configs/: afrnet_roco.yaml  baseline.yaml
data/: roco_dataset.py
evaluators/: retrieval_eval.py
losses/: losses.py
models/: afrnet.py  baseline.py  ddtp.py  gtga.py  ot_align.py  roam.py
scripts/: download_roco.py
tests/: test_10_ot_align.py  test_11_full_forward.py  test_1_python.py  test_2_cuda.py  test_3_biomedclip.py  test_4_deps.py  test_5_baseline.py  test_6_eval.py  test_7_roam.py  test_8_gtga.py  test_9_ddtp.py
trainers/: afrnet_trainer.py  baseline_trainer.py
