[project]
name = "afr"
version = "0.1.0"
description = "AFR-Net medical image-text retrieval"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch==2.7.0+cu128",
    "torchvision==0.22.0+cu128",
    "torchaudio==2.7.0+cu128",
    "open-clip-torch>=3.3.0",
    "transformers==4.40.0",
    "timm>=1.0.26",
    "einops>=0.8.2",
    "scipy>=1.15.3",
    "scikit-learn>=1.7.2",
    "albumentations>=2.0.8",
    "pot>=0.9.6.post1",
    "pandas>=2.3.3",
    "pillow>=12.2.0",
    "tqdm>=4.67.3",
    "pyyaml>=6.0.3",
    "datasets>=4.8.5",
    "wandb>=0.27.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]
torchaudio = [{ index = "pytorch-cu128" }]
